@@ -1,7 +1,6 @@
 mlr_2.1:
 - mlr now supports multi-criteria tuning
 - mlr now supports cluster analysis (experimental)
-- fix a bug when feature filtering resulted in a NoFeatureModel 
 - improve makeWeightedClassesWrapper: Hyperparams for class weighting are now supported, too.
 - removed fix.factors option from randomForest, but added it in general to makeLearner,
   so it now works for all learners. 
@@ -9,6 +8,8 @@ mlr_2.1:
 - more consistent results for tuning algorithms and parameters with "trafos" : 
   we always return the optimal settings on the transformed scale, but in the opt.path in
   the original scale.
+- fix a bug when feature filtering resulted in a NoFeatureModel 
+- resample now returns a data.frame "err.mgs" or error messages that might have occurred during resampling
 
 - new learners:
 -- classif.plsdaCaret
